@@ -2,6 +2,7 @@
 v3.1.5-git
 ----------
 
+[mms] Fix blacklist/whitelist matching with IMAP backend (Bug #13031).
 [mms] Fix procmail reject recipe (Bug #13060; admin@dei.unipd.it).
 
 
